fullstack-javascript-architecture-master/deployment/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f docker-compose.yml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: api
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: api
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f docker-compose.yml
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/back: "true"
        io.kompose.network/front: "true"
        io.kompose.service: api
    spec:
      containers:
      - image: api
        imagePullPolicy: ""
        name: api
        resources: {}
        volumeMounts:
        - mountPath: /user/src/app/public
          name: api-claim0
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: api-claim0
        persistentVolumeClaim:
          claimName: api-claim0
status: {}
