fullstack-javascript-architecture-master/deployment/proxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f docker-compose.yml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: proxy
  name: proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: proxy
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f docker-compose.yml
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/docker-network: "true"
        io.kompose.network/front: "true"
        io.kompose.service: proxy
    spec:
      containers:
      - image: nginx
        imagePullPolicy: ""
        name: proxy
        ports:
        - containerPort: 80
        - containerPort: 443
        resources: {}
        volumeMounts:
        - mountPath: /etc/nginx/conf.d/proxy.conf
          name: proxy-claim0
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: proxy-claim0
        persistentVolumeClaim:
          claimName: proxy-claim0
status: {}
