fullstack-javascript-architecture-master/deployment/docker-network-networkpolicy.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: docker-network
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/docker-network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/docker-network: "true"
